# WrightAI

./: .env.example  .gcloudignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .wright.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE-COMMERCIAL.md  Makefile  README.md  SECURITY.md  SUPABASE_MIGRATION.sql  SUPABASE_MIGRATION_ANALYTICS.sql  SUPABASE_MIGRATION_AST_BASELINE.sql  SUPABASE_MIGRATION_DRIFT_CACHE.sql  SUPABASE_MIGRATION_EMBEDDINGS.sql  SUPABASE_MIGRATION_PADDLE.sql  SUPABASE_MIGRATION_PADDLE_PRICES.sql  SUPABASE_MIGRATION_RLS.sql  SUPABASE_MIGRATION_TOKENS.sql  cloudrun-api.yaml  cloudrun-web.yaml  cloudrun-worker.yaml  fly.toml  generate_logo.py  pyproject.toml  smoke_test.py  start.sh  start_worker.sh  vercel.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml  publish.yml
api/: auth.py  chroma_cache.py  embedder.py  main.py  observability.py  quota.py  rate_limit.py  repo_store.py  token_store.py  usage_store.py  user_store.py
api/routes/: auth.py  billing.py  chat.py  coverage.py  drift.py  fix_pr.py  generate.py  internal.py  llms_txt.py  repos.py  usage.py  webhooks.py
api/tasks/: celery_app.py  email_tasks.py  generation_tasks.py  ops_alerts.py
cli/: main.py
core/: config.py
core/drift/: drift_detector.py
core/embeddings/: chroma_store.py  pgvector_store.py  voyage_embeddings.py
core/llm/: gateway.py  graph.py  prompts.py  schema.py
core/output/: injector.py  llms_txt.py  markdown_writer.py  openapi_gen.py
core/parser/: ast_chunker.py  cache.py  dep_graph.py  tree_sitter_parser.py
core/retrieval/: hybrid_retriever.py
docs/: GA4_EVENTS.md  GA4_SETUP.md
github-action/: README.md  action.yml  entrypoint.py
mcp_server/: server.py
screenshots/: capture.js  package-lock.json  package.json
scripts/: 1-gcp-setup.sh  2-migrate-data.sh  3-deploy-api.sh  4-deploy-web.sh  5-cutover.sh  backfill_tokens.py
tests/: conftest.py  test_api.py  test_chat_mcp.py  test_chunker.py  test_cli.py  test_dep_graph.py  test_drift.py  test_embeddings.py  test_injector.py  test_llm_gateway.py  test_mcp.py  test_parser.py  test_retrieval.py
tests/fixtures/: sample.js  sample.py  sample.ts
vscode-extension/: .vscodeignore  LICENSE  OVERVIEW.md  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: chat.ts  client.ts  codelens.ts  coverage.ts  drift.ts  errors.ts  extension.ts  gutter.ts  hover.ts  injector.ts
vscode-extension/test/: smoke.ts  tsconfig.json  vscode-mock.ts
web/: .dockerignore  AGENTS.md  Dockerfile  README.md  cloudbuild.yaml  eslint.config.mjs  fly.toml  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/app/[language]/: page.tsx
web/app/api/support/: route.ts
web/app/auth/callback/: page.tsx  route.ts
web/app/billing/checkout/: page.tsx
web/app/dashboard/: layout.tsx  loading.tsx  page.tsx
web/app/dashboard/chat/: page.tsx
web/app/dashboard/drift/: page.tsx
web/app/docs/: layout.tsx  page.tsx
web/app/login/: page.tsx
web/app/new/: page.tsx
web/app/pricing/: page.tsx
web/app/privacy-policy/: page.tsx
web/app/refund-policy/: page.tsx
web/app/terms-of-service/: page.tsx
web/components/: WebMCPProvider.tsx
web/components/dashboard/: CoverageBar.tsx  DashboardShell.tsx  MetricCard.tsx  Sidebar.tsx  Spinner.tsx  Topbar.tsx
web/components/landing/: DashboardPreview.tsx  FeatureScroll.tsx  FeedbackSection.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  InstallGrid.tsx  Navbar.tsx  ProblemStrip.tsx
web/components/landing-v1/: CompareSection.tsx  DashboardPreview.tsx  FeedbackSection.tsx  Footer.tsx  Hero.tsx  InstallGrid.tsx  Navbar.tsx
web/components/landing-v2/: AIContextSection.tsx  CommandCenter.tsx  CompareV2.tsx  DriftSection.tsx  FeedbackV2.tsx  FinalCTAV2.tsx  FooterV2.tsx  GetStarted.tsx  HeroV2.tsx  HomepageAnalytics.tsx  LanguageCTA.tsx  LanguagePageEvents.tsx  NavbarV2.tsx  ProblemV2.tsx  ScrollRuler.tsx  ThreePillars.tsx  TrustStrip.tsx  WhyNow.tsx
web/hooks/: useConnectedRepos.ts
web/lib/: api.ts  ga.ts  supabase.ts  user.ts
web/public/: auth.md  llms.txt  robots.txt
web/public/.well-known/: agent-index  api-catalog  oauth-authorization-server  oauth-protected-resource
web/types/: paddle.d.ts
(+17 files in other folders)
