[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wright"
version = "0.1.0"
description = "AI docstring generator that auto-documents Python, TypeScript, JavaScript, Go, and Rust — detects documentation drift and serves live docs via MCP to Claude Code, Cursor, and Copilot."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Wright AI", email = "surajsahoo19991012@gmail.com"}]
dependencies = [
    "anthropic>=0.40.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "chromadb>=0.5.0",
    "voyageai>=0.3.0",
    "networkx>=3.3",
    "scipy>=1.13.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
    "mcp>=1.0.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.50",
    "httpx>=0.27.0",
    "urllib3>=2.7.0",
    "python-multipart>=0.0.27",
    "idna>=3.15",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.8.0",
    "workos>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "supabase>=2.0.0",
    "brevo-python>=1.0.0",
    "google-genai>=2.0.0",
    # Observability
    "sentry-sdk[fastapi]>=2.0.0",
    "python-json-logger>=2.0.7",
    # Rate limiting
    "slowapi>=0.1.9",
]
keywords = [
  "docstring",
  "documentation",
  "ai",
  "code-documentation",
  "docstring-generator",
  "documentation-generator",
  "mcp",
  "claude",
  "drift-detection",
  "llms-txt",
  "vscode-extension",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Documentation",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://wrightai.live"
Repository = "https://github.com/surajs1999/WrightAI"
Documentation = "https://wrightai.live/docs"
"Bug Tracker" = "https://github.com/surajs1999/WrightAI/issues"
Changelog = "https://github.com/surajs1999/WrightAI/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
wright = "cli.main:app"
wright-api = "api.main:start"
wright-mcp = "mcp_server.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "cli*", "mcp_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
